version after integrating login and signup pages with landing page and fixed the scrollbar functionality

--- a/Ravi_LandingPage/Ravi_CSS/index.css
+++ b/Ravi_LandingPage/Ravi_CSS/index.css
@@ -95,6 +95,7 @@ header a:hover {
     background-color: lightgray;
     cursor: pointer;
     color: maroon;
+    font-weight: bolder;
     /* position: relative; */
     /* bottom: 3px; */
 }
@@ -113,10 +114,6 @@ header a:hover {
     width: 5rem;
     position: relative;
     bottom: 0.2rem;
-}
-
-.loginButton {
-    color: maroon;
 }
 
 .logo div {
@@ -283,13 +280,13 @@ header {
 }
 
 @media screen and (max-width: 1050px) {
-    .primary-btn {
+    body #hero .primary-btn {
         padding: 0.75rem 1.5rem;
     }
 }
 
 @media screen and (max-width: 635px) {
-    .primary-btn {
+    body #hero .primary-btn {
         padding: 0.5rem 1.5rem;
         font-size: 0.85rem;
     }
@@ -341,11 +338,12 @@ header {
     object-fit: cover;
 }
 
-@media screen and (max-width: 635px) {
-    .hero__content {
+@media screen and (max-width: 980px) {
+    body #hero .hero__content {
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        gap: 2rem;
     }
 }
 
@@ -374,7 +372,7 @@ header {
     }
 }
 
-@media screen and (max-width: 635px) {
+@media screen and (max-width: 980px) {
     #hero .hero__content {
         flex-direction: column;
         justify-content: space-between;
