--- a/Sign-In/Login.css
+++ b/Sign-In/Login.css
@@ -1,4 +1,4 @@
-#Register-box{
+#Register-box {
     /* border: 1px solid red; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin: auto;
@@ -8,18 +8,21 @@
     text-align: center;
     border-radius: 20px;
 }
-#registerh3{
+
+#registerh3 {
     margin-bottom: 20px;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#registerinput>h3{
+
+#registerinput>h3 {
     margin-top: 20px;
     /* margin-bottom: 20px; */
     /* border: 1px solid springgreen; */
 }
-#registerinput{
-   
+
+#registerinput {
+
     width: 100%;
     background-color: #f1f1f2;
     /* border: 1px solid rgb(66, 65, 65); */
@@ -28,21 +31,27 @@
     margin-top: 20px;
     margin-bottom: 20px;
     flex-direction: column;
-  }
-#username,#password,#process{
+}
+
+#username,
+#password,
+#process {
     width: 80%;
     margin: auto;
-   margin-top: 20px;
-   height: 40px;
-   font-size: 16px;
-   border-radius: 10px;
+    margin-top: 20px;
+    height: 40px;
+    font-size: 16px;
+    border-radius: 10px;
 }
-.login,.register{
+
+.login,
+.register {
     width: 49%;
     height: 50px;
-    font-size: 20px;  
-    
+    font-size: 20px;
+
 }
+
 .register {
     background-color: #efefef;
     color: rgb(20, 19, 19);
@@ -54,26 +63,31 @@
     color: white;
     border: 0px;
 }
-.registerspan{
+
+.registerspan {
     margin-top: 20px;
     margin-bottom: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   }
-#regilogin{
-   
+}
+
+#regilogin {
+
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.process{
+
+.process {
     width: 80%;
     margin-top: 20px;
     height: 40px;
-    background-color: #169ed4; border: 0px;
-     color: white;
-     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 18px;
-     border-radius: 10px;
+    background-color: #169ed4;
+    border: 0px;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+    border-radius: 10px;
 }
+
 @media screen and (max-width: 1050px) {
     :root {
         --h1: 4rem;
@@ -111,10 +125,10 @@ body {
     position: fixed;
     inset: 0 0 auto;
     height: 0.5rem;
-    background-color: skyblue;
+    background-color: violet;
     transform-origin: left;
     z-index: 100;
-    
+
 }
 
 /* Header CSS */
